create form to add car models

--- a/CarDealership/Views/Home/CreateForm.cshtml
+++ b/CarDealership/Views/Home/CreateForm.cshtml
@@ -1,5 +1,11 @@
 <form action="/items" method="post">
-  <label for="description">Add a new car model</label>
-  <input id="description" name="description" type="text">
+  <label for="makeModel">Add a new car model</label>
+  <input id="makeModel" name="makeModel" type="text">
+  <label for="price">Add a new car model</label>
+  <input id="price" name="price" type="text">
+  <label for="miles">Add a new car model</label>
+  <input id="miles" name="miles" type="text">
+  <label for="message">Add a new car model</label>
+  <input id="message" name="message" type="text">
   <button type="submit">Submit</button>
 </form>
