display the list of cars

--- a/CarDealership/Views/Home/Index.cshtml
+++ b/CarDealership/Views/Home/Index.cshtml
@@ -1,3 +1,4 @@
+
 <h1>Welcome to the Car Dealership!</h1>
-<a href='/items/new'>Add a new car model</a>
-<a href='/items'>See list of car models</a>
+<a href='/items/new'>Add a new car</a>
+<a href='/items'>See list of cars</a>
