--- a/CarDealership/Views/Items/CreateForm.cshtml
+++ b/CarDealership/Views/Items/CreateForm.cshtml
@@ -1,12 +1,12 @@
 <h1>This Button adds a new car model</h1>
 <form action="/items" method="post">
-  <label for="makeModel">Add a new car model</label>
+  <label for="makeModel">What is the make model of the car?</label>
   <input id="makeModel" name="makeModel" type="text">
-  <label for="price">Add a new car model</label>
-  <input id="price" name="price" type="text">
-  <label for="miles">Add a new car model</label>
-  <input id="miles" name="miles" type="text">
-  <label for="message">Add a new car model</label>
+  <label for="price">What is the price for the car?</label>
+  <input id="price" name="price" type="number">
+  <label for="miles">How many mileage does the car have?</label>
+  <input id="miles" name="miles" type="number">
+  <label for="message">What is the message for the car?</label>
   <input id="message" name="message" type="text">
   <button type="submit">Submit</button>
 </form>
