--- a/CarDealership/Views/Items/Index.cshtml
+++ b/CarDealership/Views/Items/Index.cshtml
@@ -1,13 +1,18 @@
 @using CarDealership.Models;
 
 <h1>Cars List</h1>
+@if (Model.Count == 0)
+    {
+    <p>There are no items in the list.</p>
+    }
 <ul>
   @foreach (Car item in Model)
   {
-    <li>@item.MakeModel</li>
-    <li>@item.Price</li>
-    <li>@item.Miles</li>
-    <li>@item.Message</li>
+    <li> Car Model: @item.MakeModel</li> 
+    <li>Price: @item.Price</li>
+    <li>Miles: @item.Miles</li>
+    <li>Condition: @item.Message</li>
+    <p>==================================</p>
   }
 </ul>
 <a href="/items/new">Add a new car</a>
